# TOP DIR
SET(PROJECT_NAME Aftermath)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(${PROJECT_NAME})

# Find external libraries
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")

# Set up build directories
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
SET(RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}/bin)

# Set the game flags
SET(EXTRA_FLAGS "" CACHE STRING "Additional compiler flags")
SET(CMAKE_C_FLAGS_DEBUG "-Wall -ansi -pedantic -g -DDEBUG ${EXTRA_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
SET(CMAKE_C_FLAGS_RELEASE "-O3 -s -DNDEBUG ${EXTRA_FLAGS}")
SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})

# Compile and link the game
ADD_SUBDIRECTORY(src ${RUNTIME_OUTPUT_DIRECTORY})

# Install mods
INSTALL(DIRECTORY ${SRC_DIR}/mods DESTINATION ${BIN_DIR}/${PROJECT_NAME})
INSTALL(FILES COPYING README settings.cfg DESTINATION ${BIN_DIR}/${PROJECT_NAME})
